6.0.13
Issue 3452 Error when running Run-AlValidation : Unable to load one or more of the requested types. Retrieve the LoaderExceptions property for more information.

6.0.12
Issue 3432 New-BcContainerWizard stopped working after generic images with ltsc2016, ltsc2019 and ltsc2022 was introduced
Make parameters in Copy-AppFilesToFolder mandatory
Support .zip files in folders in Copy-AppFilesToFolder
Issue 3431 Run-TestsInBcContainer, Get-TestsFromBcContainer and Run-ConnectionTest doesn't work if container is using SSL
Issue 3427 New-BCContainer in version 6.0.11 failed to run completely
Issue 3444 Container Creation fails at "Installing ASP.NET Core 1.1"

6.0.11
Issue 3420 New-BcImage uses hyperv even if it is disabled
Issue 3411 Run-AlPipeline: Exception calling "Parse" with "1" argument(s): "String '' was not recognized as a valid DateTime.

6.0.10
Issue 3415 Use process isolation

6.0.9
Issue 3404 New-BcContainerBcUser fails with 'Invoke-SqlCmd' error when running BC24
Remove support for pre 1.0.2.15 generic images
Issue 3406 Regression - Set-BcContainerKeyVaultAadAppAndCertificate only worked when running pwsh in container
Issue 3407 Export-NavContainerDatabasesAsBacpac fails using PS7x (and with tenants on BC24 altogether)
Issue 3409 Invoke-RestMethod -SkipCertificateCheck for PowerShell 7
By default use mcr.microsoft.com/businesscentral:ltscXXXX instead of mcr.microsoft.com/businesscentral:10.0.osbuild.osrevision as generic image

6.0.8
Fix error where Publish-BcNuGetPackageToContainer doesn't work with BC 24

6.0.7
Issue 3347 Download-BcNuGetPackageToFolder to support package description for app name if title is not specified
Support dependency version templates on NuGet packages
Issue 3349 NuGet package files section name is wrong when using azure blob storage direct download url
Issue 3358 Run-TestsInBcContainer using Windows Authentication doesn't work if exactly one user exists in the tenant
Fix error in Get-BcContainerAppInfo in NextMajor